[workspace.package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
repository = "https://github.com/ajuna-network/Ajuna"
version    = "0.4.0-rc3"

[workspace]
resolver = "2"
members = [
    "node",
    "runtime/bajun",
]

[workspace.dependencies]
# General
async-trait = { version = "0.1.74" }
clap        = { version = "4.5.1", default-features = false }
color-print = { version = "0.3.5" }
futures     = { version = "0.3.28", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
hex         = { version = "0.4.3", default-features = false }
jsonrpsee   = { version = "0.22.4", default-features = false }
log         = { version = "0.4.17", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
serde       = { version = "1.0.56", default-features = false }
serde_json  = { version = "1.0.113", default-features = false }
smallvec    = { version = "1.11.1", default-features = false }

# Parity codec
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info         = { version = "2.1.1", default-features = false }

# Substrate
frame-benchmarking                         = { version = "32.0.0", default-features = false }
frame-benchmarking-cli                     = { version = "36.0.0" }
frame-executive                            = { version = "32.0.0", default-features = false }
frame-support                              = { version = "32.0.0", default-features = false }
frame-system                               = { version = "32.0.0", default-features = false }
frame-system-benchmarking                  = { version = "32.0.0", default-features = false }
frame-system-rpc-runtime-api               = { version = "30.0.0", default-features = false }
frame-try-runtime                          = { version = "0.38.0", default-features = false }
pallet-aura                                = { version = "31.0.0", default-features = false }
pallet-authorship                          = { version = "32.0.0", default-features = false }
pallet-balances                            = { version = "33.0.0", default-features = false }
pallet-collective                          = { version = "32.0.0", default-features = false }
pallet-democracy                           = { version = "32.0.0", default-features = false }
pallet-grandpa                             = { version = "32.0.0", default-features = false }
pallet-identity                            = { version = "32.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "20.0.0", default-features = false }
pallet-message-queue                       = { version = "35.0.0", default-features = false }
pallet-membership                          = { version = "32.0.0", default-features = false }
pallet-migrations                          = { version = "2.0.0", default-features = false }
pallet-multisig                            = { version = "32.0.0", default-features = false }
pallet-nfts                                = { version = "26.0.0", default-features = false }
pallet-preimage                            = { version = "32.0.0", default-features = false }
pallet-proxy                               = { version = "32.0.0", default-features = false }
pallet-scheduler                           = { version = "33.0.0", default-features = false }
pallet-session                             = { version = "32.0.0", default-features = false }
pallet-sudo                                = { version = "32.0.0", default-features = false }
pallet-timestamp                           = { version = "31.0.0", default-features = false }
pallet-transaction-payment                 = { version = "32.0.0", default-features = false }
pallet-transaction-payment-rpc             = { version = "34.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "32.0.0", default-features = false }
pallet-treasury                            = { version = "31.0.0", default-features = false }
pallet-utility                             = { version = "32.0.0", default-features = false }
sc-basic-authorship                        = { version = "0.38.0" }
sc-chain-spec                              = { version = "31.0.0" }
sc-cli                                     = { version = "0.40.0" }
sc-client-api                              = { version = "32.0.0" }
sc-consensus                               = { version = "0.37.0" }
sc-consensus-aura                          = { version = "0.38.0" }
sc-consensus-grandpa                       = { version = "0.23.0" }
sc-executor                                = { version = "0.36.0" }
sc-keystore                                = { version = "29.0.0" }
sc-network                                 = { version = "0.38.0" }
sc-network-sync                            = { version = "0.37.0" }
sc-offchain                                = { version = "33.0.0" }
sc-rpc                                     = { version = "33.0.0" }
sc-rpc-api                                 = { version = "0.37.0" }
sc-service                                 = { version = "0.39.0" }
sc-sysinfo                                 = { version = "31.0.0" }
sc-telemetry                               = { version = "18.0.0" }
sc-tracing                                 = { version = "32.0.0" }
sc-transaction-pool                        = { version = "32.0.0" }
sc-transaction-pool-api                    = { version = "32.0.0" }
sp-api                                     = { version = "30.0.0", default-features = false }
sp-block-builder                           = { version = "30.0.0", default-features = false }
sp-blockchain                              = { version = "32.0.0" }
sp-consensus                               = { version = "0.36.0", default-features = false }
sp-consensus-aura                          = { version = "0.36.0", default-features = false }
sp-consensus-grandpa                       = { version = "17.0.0", default-features = false }
sp-core                                    = { version = "32.0.0", default-features = false }
sp-genesis-builder                         = { version = "0.11.0", default-features = false }
sp-inherents                               = { version = "30.0.0", default-features = false }
sp-keyring                                 = { version = "35.0.0", default-features = false }
sp-keystore                                = { version = "0.38.0", default-features = false }
sp-offchain                                = { version = "30.0.0", default-features = false }
sp-io                                      = { version = "34.0.0", default-features = false }
sp-runtime                                 = { version = "35.0.0", default-features = false }
sp-session                                 = { version = "31.0.0", default-features = false }
sp-std                                     = { version = "14.0.0", default-features = false }
sp-storage                                 = { version = "21.0.0", default-features = false }
sp-timestamp                               = { version = "30.0.0", default-features = false }
sp-transaction-pool                        = { version = "30.0.0", default-features = false }
sp-version                                 = { version = "33.0.0", default-features = false }
substrate-build-script-utils               = { version = "11.0.0" }
substrate-frame-rpc-system                 = { version = "32.0.0" }
substrate-prometheus-endpoint              = { version = "0.17.0" }
substrate-wasm-builder                     = { version = "21.0.0" }
substrate-state-trie-migration-rpc         = { version = "31.0.0" }
try-runtime-cli                            = { version = "0.42.0", default-features = false }

# Polkadot
pallet-xcm                    = { version = "11.0.0", default-features = false }
polkadot-cli                  = { version = "11.0.0" }
polkadot-service              = { version = "11.0.0", default-features = false }
polkadot-parachain-primitives = { version = "10.0.0", default-features = false }
polkadot-primitives           = { version = "11.0.0", default-features = false }
polkadot-runtime-common       = { version = "11.0.0", default-features = false }
staging-xcm                   = { version = "11.0.0", default-features = false }
staging-xcm-builder           = { version = "11.0.0", default-features = false }
staging-xcm-executor          = { version = "11.0.0", default-features = false }

# Cumulus
cumulus-client-cli                      = { version = "0.11.0" }
cumulus-client-collator                 = { version = "0.11.0" }
cumulus-client-consensus-aura           = { version = "0.11.0" }
cumulus-client-consensus-common         = { version = "0.11.0" }
cumulus-client-consensus-proposer       = { version = "0.11.0" }
cumulus-client-consensus-relay-chain    = { version = "0.11.0" }
cumulus-client-network                  = { version = "0.11.0", default-features = false }
cumulus-client-parachain-inherent       = { version = "0.5.0" }
cumulus-client-service                  = { version = "0.11.0", default-features = false }
cumulus-pallet-aura-ext                 = { version = "0.11.0", default-features = false }
cumulus-pallet-parachain-system         = { version = "0.11.0", default-features = false }
cumulus-pallet-session-benchmarking     = { version = "13.0.0", default-features = false }
cumulus-pallet-xcm                      = { version = "0.11.0", default-features = false }
cumulus-pallet-xcmp-queue               = { version = "0.11.0", default-features = false }
cumulus-primitives-aura                 = { version = "0.11.0", default-features = false }
cumulus-primitives-core                 = { version = "0.11.0", default-features = false }
cumulus-primitives-parachain-inherent   = { version = "0.11.0", default-features = false }
cumulus-primitives-utility              = { version = "0.11.0", default-features = false }
cumulus-relay-chain-inprocess-interface = { version = "0.11.0", default-features = false }
cumulus-relay-chain-interface           = { version = "0.11.0" }
cumulus-relay-chain-minimal-node        = { version = "0.11.0", default-features = false }
cumulus-relay-chain-rpc-interface       = { version = "0.11.0", default-features = false }
pallet-collator-selection               = { version = "13.0.0", default-features = false }
parachains-common                       = { version = "11.0.0", default-features = false }
staging-parachain-info                  = { version = "0.11.0", default-features = false }

# ORML
orml-vesting = { version = "0.10.0", default-features = false }

# Runtime
bajun-runtime = { path = "runtime/bajun" }

# Ajuna Pallets
#pallet-ajuna-affiliates                   = { git = "https://github.com/ajuna-network/ajuna-pallets.git", tag = "v0.7.0", default-features = false }
pallet-ajuna-awesome-avatars              = { git = "https://github.com/ajuna-network/ajuna-pallets.git", branch = "v0.1.0-polkadot-v1.10.0", default-features = false }
pallet-ajuna-battle-mogs                  = { git = "https://github.com/ajuna-network/ajuna-pallets.git", branch = "v0.1.0-polkadot-v1.10.0", default-features = false }
pallet-ajuna-awesome-avatars-benchmarking = { git = "https://github.com/ajuna-network/ajuna-pallets.git", branch = "v0.1.0-polkadot-v1.10.0", default-features = false }
pallet-ajuna-nft-transfer                 = { git = "https://github.com/ajuna-network/ajuna-pallets.git", branch = "v0.1.0-polkadot-v1.10.0", default-features = false }
pallet-ajuna-nft-staking                  = { git = "https://github.com/ajuna-network/ajuna-pallets.git", branch = "v0.1.0-polkadot-v1.10.0", default-features = false }
#pallet-ajuna-tournament                   = { git = "https://github.com/ajuna-network/ajuna-pallets.git", tag = "v0.7.0", default-features = false }
orml-pallets-benchmarking                 = { git = "https://github.com/ajuna-network/ajuna-pallets.git", branch = "v0.1.0-polkadot-v1.10.0", default-features = false }

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.release]
opt-level = 3
panic = "unwind"
